--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2181,7 +2181,7 @@ body {
 .cid-r8kJgWA9l0 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1-1920x1280.jpg");
+  background: linear-gradient(45deg, #7fd9fc, #ff3366);
 }
 .cid-r8kJgWA9l0 .mbr-text,
 .cid-r8kJgWA9l0 .mbr-section-btn {
