create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2626,14 +2626,14 @@ body {
 }
 .cid-r8kyKKhC4l .nav-tabs .nav-link {
   box-sizing: border-box;
-  color: #767676;
+  color: #ffffff;
   font-style: normal;
   font-weight: 500;
   border-radius: 3px;
   padding: 1rem 3rem;
   margin: 0.4rem .8rem !important;
   transition: color .3s;
-  border: 2px solid #767676;
+  border: 2px solid #ffffff;
 }
 .cid-r8kyKKhC4l .nav-tabs .nav-link:hover {
   background: #149dcc;
