--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2113,7 +2113,7 @@ section.lazy-placeholder:after {
 .cid-r8kyKKhC4l {
   padding-top: 75px;
   padding-bottom: 75px;
-  background-color: #cc2952;
+  background-color: #cccccc;
 }
 .cid-r8kyKKhC4l .mbr-section-text {
   color: #232323;
