--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1704,7 +1704,7 @@ section.lazy-placeholder:after {
 .cid-r8kJgWA9l0 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #7fd9fc, #ff3366);
+  background: linear-gradient(45deg, #767676, #c1c1c1);
 }
 .cid-r8kJgWA9l0 .mbr-text,
 .cid-r8kJgWA9l0 .mbr-section-btn {
