--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2176,6 +2176,9 @@ section.lazy-placeholder:after {
 .cid-r8kyKKhC4l .mbr-section-subtitle B {
   color: #fffefe;
 }
+.cid-r8kyKKhC4l H4 {
+  text-align: center;
+}
 .cid-r8kfkug7aL .navbar {
   background: #ffffff;
   transition: none;
